2019-01-31  Charlie Zender  <zender@uci.edu>

	* NCO 4.7.9-alpha05 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.7.9-alpha05: Kubasek';git push
	git tag -a 4.7.9-alpha05 -m 'd2f doc, ncremap SGS ELM fix';git push --tags

2019-01-30  Charlie Zender  <zender@uci.edu>

	* ncremap implement and verify that Min Xu's modification conserves fields not land area
	Previous ncremap SGS implementation conserved land area not fields
	Conserving fields (slightly) more important so changing to that
	Expect most non-conservation of area will disappear once ELM archives area/landfrac in DP
	My original conservation diagnostic for raw files used an unreliable identity remap
	Dianostic conservation tests should be turned into regression tests

2019-01-28  Charlie Zender  <zender@uci.edu>

	* Investigate _FillValue behavior described by John Wilkin

	* Add stubs for PPC Digit Rounding algorithm of DCG19 and/or Bit Grooming 2 (BG2)

2019-01-25  Charlie Zender  <zender@uci.edu>

	* ncremap rename internal variables as with 'sgs' instead of 'lnd'

	* Add E3SM material on Manual Grid Generation to ncremap documentation

	* Add E3SM material on SGS and RRG options to ncremap documentation

2019-01-23  Charlie Zender  <zender@uci.edu>

	* Add ncra SSC MRO regression test to NCO_rgr.pm

	* ncremap SGS mode fails conservation tests at 10^-4 level
	  Min Xu warns that conv_remap conserves values while ncremap SGS conserves area

2019-01-22  Charlie Zender  <zender@uci.edu>

	* Add stubs for PPC BG2, Bit Grooming version 2 which features dynamic masks

	* Document --d2f in manual and man pages

2019-01-21  Charlie Zender  <zender@uci.edu>

	* ncremap add SGS procedures for mpascice, change prc_typ='mpas' to prc_mpas='Yes'

	* ncremap advertise PPC in usage

2019-01-20  Charlie Zender  <zender@uci.edu>

	* Audit ncremap and add comments on treatment of land vs. sea-ice data

2019-01-19  Charlie Zender  <zender@uci.edu>

	* NCO 4.7.9-alpha04 release procedure: